feat: Improvements to Profile Components

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
+    "react-i18next": "^12.2.2",
+    "react-icons": "^4.8.0",
     "react-router-dom": "6.10.0"
   },
   "devDependencies": {
@@ -27,14 +28,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@vitejs/plugin-react": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.1"
+    "vite": "^4.3.3"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -42,7 +43,8 @@
       "<rootDir>/jest-setup.ts"
     ],
     "moduleNameMapper": {
-      "\\.(css|less)$": "identity-obj-proxy"
+      "\\.(css|less)$": "identity-obj-proxy",
+      "\\.svg": "<rootDir>/__mocks__/svgrMock.js"
     }
   }
 }
