--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "typescript": "^5.1.6",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.4.4"
   },
   "jest": {
