architecture: folder re-structure + path alias '~' for easy imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,13 @@
       {
         "name": "typescript-plugin-css-modules"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src"
